# roofmeasureMCP

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
src/roofmeasure/: __init__.py  cli.py  diagrams.py  geometry.py  model.py  pipeline.py  pricing.py  report.py  server.py  skeleton.py  solar.py  vectorize.py  xactimate.py
tests/: test_geometry.py
