[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roofmeasure-mcp"
version = "0.1.0"
description = "Free EagleView-style satellite roof measurements (eaves, rakes, hips, ridges, valleys, pitch, squares with/without waste) plus modular Xactimate-style estimating. MCP server + CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stronghouse Solutions" }]
keywords = ["roofing", "eagleview", "xactimate", "mcp", "satellite", "measurement", "insurance"]
dependencies = [
    "mcp>=1.2.0",
    "typer>=0.12",
    "requests>=2.31",
    "numpy>=1.24",
    "tifffile>=2023.7.10",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
roofmeasure = "roofmeasure.cli:app"
roofmeasure-mcp = "roofmeasure.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roofmeasure"]
